--- a/package.json
+++ b/package.json
@@ -29,8 +29,8 @@
     "moment": "^2.29.4",
     "nprogress": "^0.2.0",
     "pinia": "^2.1.3",
-    "react-dnd-html5-backend": "^16.0.1",
     "typescript": "^4.9.5",
+    "validator": "^13.11.0",
     "vite-plugin-svg-icons": "^2.0.1",
     "vue": "^3.2.47",
     "vue-dnd-zone": "^0.4.0",
