--- a/.env.development
+++ b/.env.development
@@ -2,5 +2,5 @@
 ENV = 'development'
 
 # .env.development
-VITE_APP_BASE_URL = 'http://localhost:8888/flow2'
+VITE_APP_BASE_URL = 'http://127.0.0.1:8888/flow2'
 VITE_BASE_PATH = '/'
