--- a/package.json
+++ b/package.json
@@ -5,37 +5,34 @@
   "scripts": {
     "dev": "vite",
     "test": "vite --mode test",
-    "prod": "vite --mode production",
     "build": "vite build",
-    "build:test": "vite build --mode test",
-    "build:prod": "vite build --mode production",
     "preview": "vite preview"
   },
   "dependencies": {
     "axios": "^1.4.0",
     "js-cookie": "^3.0.5",
-    "less": "^4.1.3",
-    "less-loader": "^11.1.3",
     "lodash": "^4.17.21",
     "lodash-es": "^4.17.21",
     "moment": "^2.29.4",
     "nprogress": "^0.2.0",
     "pinia": "^2.1.3",
-    "typescript": "^4.9.5",
     "validator": "^13.11.0",
     "vite-plugin-svg-icons": "^2.0.1",
     "vue": "^3.2.47",
     "vue-router": "^4.2.2",
-    "vuedraggable": "^4.1.0",
     "vue3-dragscroll": "^1.0.2",
-    "vue3-print-nb": "^0.1.4"
+    "vue3-print-nb": "^0.1.4",
+    "vuedraggable": "^4.1.0"
   },
   "devDependencies": {
     "@arco-design/web-vue": "^2.53.2",
-    "@vitejs/plugin-vue": "^4.0.0",
+    "@vitejs/plugin-vue": "^4.5.0",
+    "terser": "^5.24.0",
     "unplugin-auto-import": "^0.16.6",
     "unplugin-vue-components": "^0.25.1",
-    "vite": "^4.1.4",
-    "vite-plugin-html": "^3.2.0"
+    "vite": "^4.5.0",
+    "vite-plugin-html": "^3.2.0",
+    "typescript": "^4.9.5",
+    "less": "^4.1.3"
   }
 }
