--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@wangeditor/editor": "^5.1.23",
+    "@wangeditor/editor-for-vue": "^5.1.12",
     "axios": "^1.4.0",
     "js-cookie": "^3.0.5",
     "lodash": "^4.17.21",
@@ -22,17 +24,18 @@
     "vue-router": "^4.2.2",
     "vue3-dragscroll": "^1.0.2",
     "vue3-print-nb": "^0.1.4",
+    "vue3-signature": "^0.2.4",
     "vuedraggable": "^4.1.0"
   },
   "devDependencies": {
     "@arco-design/web-vue": "^2.53.2",
     "@vitejs/plugin-vue": "^4.5.0",
+    "less": "^4.1.3",
     "terser": "^5.24.0",
+    "typescript": "^4.9.5",
     "unplugin-auto-import": "^0.16.6",
     "unplugin-vue-components": "^0.25.1",
     "vite": "^4.5.0",
-    "vite-plugin-html": "^3.2.0",
-    "typescript": "^4.9.5",
-    "less": "^4.1.3"
+    "vite-plugin-html": "^3.2.0"
   }
 }
